Fix CORS policy, add health check endpoint, and increase frontend request timeout